Add icons and attribution page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ border-radius: 10px;
 background: whitesmoke;
 text-align: center;
 ">
-    <h1>MULTIMAQ PERU</h1>
+    <h1>MULTIMAQ PERÚ</h1>
     <h2>En construcción</h2>
     <br>
        <a style="
@@ -35,10 +35,10 @@ text-align: center;
        align-items: center;
        "
         href="https://wa.me/+51943510954">
-        <img src="wa.webp" width="25px"/>
+           <img src="wa.png" width="25px" style="margin-right:10px"/>
+
         WhatsApp
     </a>
-    <br>
     <br>
     <a style="
     display: flex;
@@ -46,8 +46,7 @@ text-align: center;
     align-items: center;
     "
      href="tel:+51943510954">
-        <img src="phone.png" width="25px"/>
-        943 510 954</a>
+        <img src="phone.png" width="25px" style="margin-right:10px"/>943 510 954</a>
 </div>
 </div>
 </html>
