--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_PE">
     <meta property="og:site_name" content="MULTIMAQ PERU">
-<!--    <meta property="og:image" content="/assets/banner.png">-->
+    <meta property="og:image" content="/assets/banner.png">
 
 <!--    <meta name="twitter:image" content="/assets/banner.png">-->
 <!--    <meta name="twitter:card" content="summary_large_image">-->
