--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,32 +8,34 @@
     <link rel="stylesheet" href="/styles.css">
     <meta name="viewport" content="user-scalable=yes, width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Bienvenido a MULTIMAQ PERU. Encontrarás maquinaria pesada usada en marcas de calidad como Caterpillar y attachments">
+    <meta name="description"
+          content="Bienvenido a MULTIMAQ PERU. Encontrarás maquinaria pesada usada en marcas de calidad como Caterpillar y attachments">
     <meta name="theme-color" content="#D6322C">
     <meta name="author" content="MULTIMAQ PERU">
     <meta property="og:title" content="MULTIMAQ PERU">
-    <meta property="og:description" content="Bienvenido a MULTIMAQ PERU. Encontrarás maquinaria pesada usada en marcas de calidad como Caterpillar y attachments">
+    <meta property="og:description"
+          content="Bienvenido a MULTIMAQ PERU. Encontrarás maquinaria pesada usada en marcas de calidad como Caterpillar y attachments">
     <meta property="og:url" content="https://multimaqperu.com">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_PE">
     <meta property="og:site_name" content="MULTIMAQ PERU">
     <meta property="og:image" content="/assets/banner.png">
 
-<!--    <meta name="twitter:image" content="/assets/banner.png">-->
-<!--    <meta name="twitter:card" content="summary_large_image">-->
-<!--    <meta name="twitter:image:alt" content="">-->
-<!--    <meta name="twitter:creator" content="@">-->
-<!--    <meta name="twitter:site" content="@">-->
-<!--    <meta name="twitter:site_name" content="@">-->
-<!--    <meta name="twitter:title" content="MULTIMAQ PERU">-->
-<!--    <meta name="twitter:description" content="">-->
+    <!--    <meta name="twitter:image" content="/assets/banner.png">-->
+    <!--    <meta name="twitter:card" content="summary_large_image">-->
+    <!--    <meta name="twitter:image:alt" content="">-->
+    <!--    <meta name="twitter:creator" content="@">-->
+    <!--    <meta name="twitter:site" content="@">-->
+    <!--    <meta name="twitter:site_name" content="@">-->
+    <!--    <meta name="twitter:title" content="MULTIMAQ PERU">-->
+    <!--    <meta name="twitter:description" content="">-->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="180x180"  href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-<!--    <meta name="msapplication-TileColor" content="#D6322C">-->
-<!--    <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">-->
+    <!--    <meta name="msapplication-TileColor" content="#D6322C">-->
+    <!--    <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">-->
     <link rel="manifest" href="/manifest.json">
     <script>if('serviceWorker' in navigator){navigator.serviceWorker.register("/serviceWorker.js")}</script>
 
@@ -52,34 +54,35 @@ justify-content: center;
 align-items: center;
 font-size: 150%;
 ">
-<div style="
+    <div style="
 padding: 10px;
 width: 90%;
 border-radius: 10px;
 background: whitesmoke;
 text-align: center;
 ">
-    <h1>MULTIMAQ PERÚ</h1>
-    <h2>En construcción</h2>
-    <br>
-       <a style="
+        <h1>MULTIMAQ PERÚ</h1>
+        <h2>En construcción</h2>
+        <br/>
+        <a style="
        display: flex;
        justify-content: center;
        align-items: center;
        "
-        href="https://wa.me/+51943510954">
-           <img src="wa.png" width="25px" style="margin-right:10px"/>
+           href="https://wa.me/+51943510954">
+            <img src="wa.png" width="25px" style="margin-right:10px"/>
 
-        WhatsApp
-    </a>
-    <br>
-    <a style="
+            WhatsApp
+        </a>
+        <br/>
+        <a style="
     display: flex;
     justify-content: center;
     align-items: center;
     "
-     href="tel:+51943510954">
-        <img src="phone.png" width="25px" style="margin-right:10px"/>943 510 954</a>
-</div>
+           href="tel:+51943510954">
+            <img src="phone.png" width="25px" style="margin-right:10px"/>943 510 954</a>
+        <br/>
+    </div>
 </div>
 </html>
