Add excavator bg image

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -58,8 +58,16 @@ font-size: 150%;
 padding: 10px;
 width: 90%;
 border-radius: 10px;
-background: whitesmoke;
+background-image: url('assets/a.png');
+background-size: 400px, auto;
 text-align: center;
+">
+        <div style="
+display: inline-block;
+padding-left: 20px;
+padding-right: 20px;
+border-radius: 10px;
+background: #EEEEEEE3;
 ">
         <h1>MULTIMAQ PERÚ</h1>
         <h2>En construcción</h2>
@@ -70,8 +78,7 @@ text-align: center;
        align-items: center;
        "
            href="https://wa.me/+51943510954">
-            <img src="wa.png" width="25px" style="margin-right:10px"/>
-
+            <img src="assets/wa.png" width="25px" style="margin-right:10px"/>
             WhatsApp
         </a>
         <br/>
@@ -81,8 +88,9 @@ text-align: center;
     align-items: center;
     "
            href="tel:+51943510954">
-            <img src="phone.png" width="25px" style="margin-right:10px"/>943 510 954</a>
+            <img src="assets/phone.png" width="25px" style="margin-right:10px"/>943 510 954</a>
         <br/>
+        </div>
     </div>
 </div>
 </html>
